# cloud-share-rs

./: .gitignore  Cargo.toml  README.md  Untitled.xcf  build.rs
assets/: client_secret.json  icon.xcf
src/: cloud.rs  cloud_state.rs  command.rs  config.rs  log.rs  main.rs  registry.rs
